added categorie search

--- a/css/screen.css
+++ b/css/screen.css
@@ -74,7 +74,7 @@
   --global-input-error-boxShadowColor: var(--global-color-error-x-transparent);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --global-page-color: White;
     --global-page-backgroundColor: var(--global-color-neutral-xxxx-dark);
@@ -90,7 +90,7 @@
     --global-input-error-borderColor: var(--global-input-backgroundColor);
     --global-input-error-boxShadowColor: var(--global-color-error-transparent);
   }
-}
+} */
 
 /*------------------------------------*\
 #GENERIC
@@ -600,104 +600,6 @@ input::placeholder {
 \*------------------------------------*/
 
 /*
-  Component: Logo
-  ---
-  Website main logo
-*/
-
-.c-logo {
-  height: var(--global-whitespace);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: var(--global-whitespace-lg);
-}
-
-.c-logo__symbol {
-  height: 100%;
-}
-
-.c-logo__path--1 {
-  fill: var(--logo__path--1--fill, var(--global-color-neutral-xxxx-dark));
-}
-
-.c-logo__path--2 {
-  fill: var(--logo__path--2--fill, var(--global-color-alpha));
-}
-
-.c-logo__path--3 {
-  fill: var(--logo__path--3--fill, var(--global-color-alpha-x-dark));
-}
-
-@media (prefers-color-scheme: dark) {
-  .c-logo {
-    --logo__path--1--fill: White;
-    --logo__path--2--fill: var(--logo__path--1--fill);
-    --logo__path--3--fill: var(--logo__path--1--fill);
-  }
-}
-
-/*
-  Component: Card
-  ---
-  Card with box shadow
-*/
-
-.c-card {
-  --card-borderRadius: var(--global-borderRadius);
-  background-color: var(--card-backgroundColor, White);
-  margin-bottom: var(--global-whitespace);
-  border-radius: var(--card-borderRadius, var(--global-borderRadius));
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 2px 4px rgba(0, 0, 0, 0.075);
-  overflow: hidden;
-}
-
-/* Add padding to child for more flexibility */
-.c-card__body,
-.c-card__footer {
-  padding: var(--global-whitespace);
-}
-
-.c-card__footer {
-  text-align: center;
-  border-top: var(--global-borderWidth) solid
-    var(--card__footer-borderColor, var(--global-color-neutral-xxx-light));
-}
-
-.c-card__title {
-  text-align: center;
-  font-size: 18px;
-  line-height: calc(var(--global-baseline) * 3);
-  font-weight: 600;
-}
-
-/* This allows c-card__body and __footer to have equal padding everywhere */
-
-.c-card__body > *:last-child,
-.c-card__footer > *:last-child,
-.c-card__body > *:last-child > *:last-child,
-.c-card__footer > *:last-child > *:last-child {
-  margin-bottom: 0;
-}
-
-@media (min-width: 27em) {
-  .c-card__body {
-    padding: var(--global-whitespace-xl);
-  }
-
-  .c-card__title {
-    margin-bottom: var(--global-whitespace-xl);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .c-card {
-    --card-backgroundColor: var(--global-color-neutral-xxx-dark);
-    --card__footer-borderColor: var(--global-color-neutral-xxxx-dark);
-  }
-}
-
-/*
   Component: Forms
   ---
   Everything form related here
@@ -705,6 +607,13 @@ input::placeholder {
 
 .c-form-field {
   position: relative;
+  float: right;
+  width: auto;
+  margin-right: var(--global-whitespace-md);
+  margin-top: 2vh;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: var(--global-whitespace-md);
 }
 
 .c-form-field--option {
@@ -854,11 +763,13 @@ more padding on the right to avoid overlap
     )
     var(--global-whitespace-md);
   line-height: calc(var(--global-baseline) * 3);
-  width: 100%;
+  width: auto;
   outline: none;
   box-shadow: var(--button-boxShadow, 0);
   transition: all var(--global-transitionDuration-alpha)
     var(--global-transitionEasing-out);
+  display: inline-block;
+  max-width: 10vw;
 }
 
 .c-button:hover {
@@ -908,6 +819,7 @@ more padding on the right to avoid overlap
 
 .c-option-list {
   margin-bottom: var(--global-whitespace-lg);
+  display: inline-block;
 }
 
 .c-option-list__item {
@@ -1137,6 +1049,7 @@ more padding on the right to avoid overlap
 .c-custom-select {
   display: block;
   position: relative;
+  width: 20vw;
 }
 
 .c-custom-select__symbol {
